# pp

./: .env.example  .envrc  .envrc.example  .gitignore  .pnpmrc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  DEVELOPMENT.md  LATER.md  LICENSE  NEXT.md  NOT.md  README.md  TESTING.md  Taskfile.yml  attribution.html  eslint.config.js  fetch_pronunciations.py  flake.nix  index.html  mkdocs.yml  package-lock.json  package.json  phrases-de-DE.yaml  phrases-de.yaml  phrases-en-GB.yaml  phrases-en.yaml  phrases-fr-FR.yaml  phrases-fr.yaml  playwright.config.js  pnpm-workspace.yaml  pyproject.toml  run  svelte.config.js  tsconfig.build.json  tsconfig.json  upload_to_hf.py  vite.config.js  (+4 more)
docs/: questions.md
done/: 2026-02-28-french-uilang-level-text-i18n.md  2026-02-28-i18n-completeness-test.md  2026-02-28-ipa-validity-test.md  2026-03-01-background-model-loading.md  2026-03-01-en-gb-voice-fix.md  2026-03-01-main-thread-analysis.md  2026-03-01-model-worker-responsive-ui.md  2026-03-01-peak-normalize-audio-before-inference.md  2026-03-01-show-phrase-in-ui-lang.md  2026-03-01-ui-lang-change-reactivity.md
misc/: fonts.txt  phrases.txt
onnx/: export_espeak_int4.py  export_to_onnx.py  export_zipa.py  export_zipa_docker.sh  run_export.sh  validate_onnx.py  zipa_export_colab.ipynb
scripts/: README.md  add-test-recording.sh  add-twemoji-phrases.py  align-phrases.py  analyze-phrase-ipas.py  compare-ipa.ts  deploy.sh  detect-phrase-ipas.py  espeak-ipa.py  export_panphon_binary.py  export_panphon_features.py  extract-and-compare.ts  extract_emoji_low_aoa.py  (+24 more)
(+423 files in other folders)
