[project]
name = "phoneme-party"
version = "0.1.0"
description = "Learn speaking clearly"
requires-python = ">=3.8"
dependencies = [
    "panphon",
    "transformers",
    "torch",
    "onnx",
    "onnxruntime",
    "huggingface_hub",
    "sentencepiece",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
